--- a/docassemble_base/pyproject.toml
+++ b/docassemble_base/pyproject.toml
@@ -99,6 +99,7 @@ dependencies = [
   "jaraco.classes==3.4.0",
   "jaraco.context==6.0.1",
   "jaraco.functools==4.2.1",
+  "javascripthon==0.12",
   "jdcal==1.4.1",
   "jeepney==0.9.0",
   "jellyfish==1.2.0",
