PROTOTYPE: allow logging to arbitrary logging servers
Mostly just customizing the LOGSERVER port. Lets us work with papertrail.

--- a/Docker/docassemble-syslog-ng.conf
+++ b/Docker/docassemble-syslog-ng.conf
@@ -12,7 +12,7 @@ source s_docassemble {
 };
 
 destination d_network {
-    syslog("`LOGSERVER`" transport("tcp") port(514));
+    syslog("`LOGSERVER`" transport("tcp") port(`LOGSERVERPORT`));
 };
 
 log {
